# Demiurg-Engine-A

./: CMakeLists.txt  DESIGN.md  DemEn.sln  LICENSE  README.md
.github/workflows/: ci.yml
assets/textures/backgrounds/: .stamp  dirt.texraw  grass.texraw  gravel.texraw  leaves.texraw  sand.texraw  snow.texraw  stone.texraw  water.texraw  wood.texraw
ci/: check_asm_has_benchmark.sh  check_interface_drift.sh  check_optimization_justification.sh  check_texgen_deterministic.sh
docs/agent_pipeline/: README.md  benchmarker.md  phase_gates.md  planner.md  specialist_contract.md
docs/appendices/: A_region_file_format.md  B_fluid_solver.md  C_vulkan_pipeline_layouts.md  E_benchmark_harness.md  F_material_composition.md  G_layer2_readiness_apis.md  H_placeholder_texgen.md  README.md
scripts/: build.ps1  build.sh  package.ps1  package.sh
shaders/: CMakeLists.txt
shaders/spirv/: phase0_probe.frag.spv
shaders/src/: opaque_mesh.frag  opaque_mesh.vert  phase0_probe.frag  phase0_probe.vert
src/managed/DemEn.Game/: DemEn.Game.csproj  Input.cs  Player.cs  Program.cs  Vec3.cs
src/managed/DemEn.Game/Toys/: FallingLeaf.cs  Flag.cs  IToy.cs  Sailboat.cs  Smoke.cs  Windmill.cs
src/managed/DemEn.Interop/: DemEn.Interop.csproj  NativeLibrary.cs
src/native/: demen_abi.cpp
src/native/fluid/: CMakeLists.txt  README.md  air_solver.cpp  air_solver.hpp  fluid_abi.cpp  grid.hpp  water_ca.cpp  water_ca.hpp  wave_solver.cpp  wave_solver.hpp  weather_cycle.cpp  weather_cycle.hpp
src/native/include/demen/: abi.hpp  fluid.hpp  meshing.hpp  render_graph.hpp  renderer.hpp  spatial.hpp  texture_composition.hpp  voxel_store.hpp
src/native/meshing/: CMakeLists.txt  README.md  chunk_view.cpp  chunk_view.hpp  greedy_mesher.cpp  greedy_mesher.hpp  meshing_abi.cpp
src/native/renderer/: CMakeLists.txt  README.md  pipeline_cache.cpp  pipeline_cache.hpp  render_graph.cpp  vk_allocator.cpp  vk_allocator.hpp  vk_instance.cpp  vk_instance.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_window.cpp
src/native/spatial/: CMakeLists.txt  README.md  spatial.cpp
src/native/texture_composition/: CMakeLists.txt  README.md  atlas.cpp  atlas.hpp  texraw.cpp  texraw.hpp  texture_composition_abi.cpp
src/native/voxel_store/: CMakeLists.txt  README.md  column.cpp  column.hpp  palette_chunk.cpp  palette_chunk.hpp  region_io.cpp  region_io.hpp  voxel_store_abi.cpp  world.cpp  world.hpp
src/native/voxel_store/codex/: README.md  agent_presets.md  arg_parser.cpp  arg_parser.hpp  console_render.cpp  console_render.hpp  file_ops.cpp  file_ops.hpp  gas_generator.cpp  gas_generator.hpp  grid_types.hpp  random_world_initializer.cpp  random_world_initializer.hpp  random_world_initializer_main.cpp  world_fill.cpp  world_fill.hpp  world_init.cpp  world_init.hpp
tests/native/: CMakeLists.txt  test_abi_smoke.cpp  test_atlas_hot_reload.cpp  test_greedy_mesh.cpp  test_region_header.cpp  test_round_trip_10k.cpp
tools/benchmarker/: CMakeLists.txt  README.md  main.cpp  run.py
tools/placeholder_texgen/: CMakeLists.txt  generate.py  materials.json
